3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

types/skillscroll/skillscroll.c, types/spellbook/spellbook.c: Use METHOD_OK
  instead of METHOD_ERROR when the applier is not a player.
Alex Schulzt 2007-06-08

server/ob_types.c, server/apply.c, types/spellbook/spellbook.c,
  types/skillscroll/skillscroll.c. types/legacy/apply.c, types/Makefile.am,
  include/typesproto.h, include/sproto.h:
  Refactor apply for skillscrolls and spellbooks.
server/daemon.c: Remove extraenous parameter for become_daemon.
include/sproto.h: Update sproto.h
Alex Schultz 2007-06-07

Documentation, no functional change.
 server/shop.c
 types/trap/rune.c
Nicolas Weeger 2007-06-07

server/rune.c, include/typesproto.h, types/trap/{trap.c, rune.c, common_trap.c},
  types/rune/rune.c, types/legacy/process.c, types/Makefile.am: Refactor some
  rune and trap code.
Alex Schultz 2007-06-06

common/button.c: document, no functional change.
Nicolas Weeger 2007-06-06

Create the 'bugs/bugtrack' directories for the unit test framework. Add test for a bug.
 configure.ac: add new directories
 doc/Developers/testplans: update
 test/Makefile.am: add directory
New files:
 test/bugs/bugtrack/check_1727944.c Makefile.am
 test/bugs/Makefile.am
Nicolas Weeger 2007-06-04

common/utils.c: don't try to decay a non head object, this leads to abort() from remove_ob().
Nicolas Weeger 2007-06-04

Add Crossfire.Object.Skill property.
 plugins/cfpython/include/cfpython_object_private.h
 plugins/cfpython/cfpython_object.c
 plugins/common/plugin_common.c: fix a crash when a NULL value.
Nicolas Weeger 2007-06-04

common/living.c: don't ignore exp gained in a skill you don't know yet.
Nicolas Weeger 2007-06-04
