@@ -15,6 +15,8 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+server/ob_methods.c, include/sproto.h: Make METHOD_UNHANDLED cause fallback to
+  other callbacks.
 types/skillscroll/skillscroll.c, types/spellbook/spellbook.c: Use METHOD_OK
   instead of METHOD_ERROR when the applier is not a player.
 Alex Schulzt 2007-06-08
